--- a/ipy_readexcel 1120.ipynb
+++ b/ipy_readexcel 1120.ipynb
@@ -231,9 +231,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H单仓 首次解析状态:200 https://tv.youdu.fan:666\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://盒子迷.top/禁止贩卖\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 https://安卓哥.com\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 http://fongmi.top\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 http://接口.tvbox.中国\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 https://盒子迷.top/4K\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://盒子迷.top/春盈天下\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 http://饭太硬.top/tv\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 http://我不是.肥猫.live/接口禁止贩卖\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 https://hezi.tvboxhz.top/dxaw0\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://agit.ai/cyl58/yl/raw/branch/master/ml.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 https://tvbox.meitufu.com/TVBox/tv.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/leevi0321/apps/raw/room.json?ref=main\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H单仓 首次解析状态:200 https://mirror.ghproxy.com/https://github.com/hd9211/Tvbox1/blob/main/cr.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://mirror.ghproxy.com/https://github.com/bizhangjie/CatVodSpider/blob/main/json/index18.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://mirror.ghproxy.com/https://raw.githubusercontent.com/bizhangjie/CatVodSpider/main/json/index18.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://mirror.ghproxy.com/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/catcr.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://mirror.ghproxy.com/https://raw.githubusercontent.com/aliluya1977/TVBox/c0b8aa099c3f0847d037c169d493cc9172aea7b4/papa.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/wxrj/wx/raw/wx.json?ref=master\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 https://www.mpanso.com/小米/DEMO.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 http://饭.eu.org/tv\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "解析失败:  失败状态：000 http://fan.xxooo.cf/tv\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 http://www.饭太硬.com/tv\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 http://fty.xxooo.cf/tv\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 http://fty.888484.xyz/tv\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H线路 首次解析状态:200 https://9280.kstore.space/wex.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H单仓 首次解析状态:200 https://ghp.ci/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/lemoncr.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "H单仓 首次解析状态:200 https://www.kdocs.cn/l/csxAeSxqNok4\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/wxrj/wx/raw/yx.txt?ref=master\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/wxrj/wx/raw/jh.txt?ref=master\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/a.txt?ref=main\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/b.txt?ref=main\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/c.txt?ref=main\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/d.txt?ref=main\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
+      "other 更换UA状态: 200 https://盒子迷.top/\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import openpyxl\n",
     "import requests\n",
@@ -305,7 +382,7 @@
     "        else:\n",
     "            break\n",
     "        i=i+1\n",
-    "        workbook.save(filename = \"excel_1121.xlsx\")\n",
+    "        workbook.save(filename = \"excel_1204.xlsx\")\n",
     "        print(\"__\"*100)\n",
     "if __name__ == '__main__':\n",
     "    main()\n"
