--- a/ipy_jsontvbox_Backup_2412.ipynb
+++ b/ipy_jsontvbox_Backup_2412.ipynb
@@ -419,6 +419,152 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 20250103 青龙 backup\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests,re,json,os,time\n",
+    "import notify\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def respon_out(respon): #输入respond,判断线路、单仓和多仓\n",
+    "    mcang=re.search(\"storeHouse\",respon,re.M|re.I)\n",
+    "    scang = re.search(\"urls\",respon,re.M|re.I)\n",
+    "    xlu = re.search(\"sites\",respon,re.M|re.I)\n",
+    "    if xlu is not None :\n",
+    "        return 0 #\"H线路\"\n",
+    "    elif xlu is  None and scang is not None and mcang is None:\n",
+    "        return 1 #\"H单仓\"\n",
+    "    elif xlu is  None and scang is  None and mcang is not None:\n",
+    "        return 2 #\"H多仓\"\n",
+    "    else :\n",
+    "        return \"other\"\n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"http://fly.lyin.cf/?url=\" #失效\n",
+    "    agentlink1=\"http://lige.unaux.com/?url=\" \n",
+    "    agentlink2=\"https://xn--sss604efuw.com/jm/jiemi.php?url=\"\n",
+    "    urll=agentlink1+url\n",
+    "    url2=agentlink2+url\n",
+    "    return url2\n",
+    "\n",
+    "def fetch_url_info(url):\n",
+    "    try:\n",
+    "        \n",
+    "        start_time = time.time() # 记录开始时间\n",
+    "        response = requests.get(url) # 发送GET请求\n",
+    "        end_time = time.time() # 记录结束时间\n",
+    "        response_time = end_time - start_time # 计算响应时间\n",
+    "        content_length_kb = len(response.content) / 1024 # 获取内容长度并转换为KB\n",
+    "        print(f\"响应时间: {response_time:.4f} 秒\")\n",
+    "        print(f\"内容长度: {content_length_kb:.2f} KB\")\n",
+    "        \n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        print(f\"请求失败: {e}\")\n",
+    "\n",
+    "def process_json(url): # 判断url路线有效性，并在本地生成tvbox_json文件\n",
+    "    response = requests.get(url,verify=False)\n",
+    "    headers={\"User-Agent\":\"okhttp/4.1.0\"}\n",
+    "    if response.status_code == 200:\n",
+    "        jsondata = json.loads(response.text)\n",
+    "        datas=jsondata['urls']\n",
+    "        x=len(datas)\n",
+    "        print('总线路条数：',x)\n",
+    "        for data in datas:\n",
+    "            testurl=data['url']\n",
+    "            start_time = time.time()\n",
+    "            try:\n",
+    "                rnse = requests.get(testurl,verify=False,timeout =60)\n",
+    "                if rnse.status_code==200:\n",
+    "                    if respon_out(rnse.text)==0 and len(rnse.text) / 1024 > 2:\n",
+    "                        print(data['name'],data['url'],\"线路成功\")\n",
+    "                    else:\n",
+    "                        # rnse1= requests.get(addlink(testurl),verify=False,timeout =60)\n",
+    "                        rnse1= requests.get(testurl,headers=headers,verify=False,timeout =60)\n",
+    "                        if rnse1.status_code==200 and respon_out(rnse1.text)==0 and len(rnse1.text) / 1024 > 2:\n",
+    "                            print(data['name'],data['url'],\"线路成功\")\n",
+    "                        else:\n",
+    "                            datas.remove(data)\n",
+    "                            print('已删除当前失败',data['name'],data['url'])\n",
+    "                else:\n",
+    "                    datas.remove(data)\n",
+    "                    print('已删除当前失败',data['name'],data['url'])\n",
+    "            except Exception:\n",
+    "                datas.remove(data)\n",
+    "                print('已删除当前error',data['name'],data['url'])\n",
+    "            else:\n",
+    "                pass\n",
+    "            finally:\n",
+    "                content_length_kb = len(rnse.text) / 1024\n",
+    "                end_time = time.time()\n",
+    "                response_time = end_time - start_time\n",
+    "                print(f\"响应时间: {response_time:.4f} 秒; \",f\"内容长度: {content_length_kb:.2f} KB\")\n",
+    "                print(\"-\"*100)\n",
+    "                # pass\n",
+    "        y=len(datas) #成功路线\n",
+    "    print('成功路线条数：',y)\n",
+    "\n",
+    "    def DelRepeat(data,key):\n",
+    "        new_data = [] # 用于存储去重后的list\n",
+    "        values = []   # 用于存储当前已有的值\n",
+    "        for d in data:\n",
+    "            if d[key] not in values:\n",
+    "                new_data.append(d)\n",
+    "                values.append(d[key])\n",
+    "        z=len(data)-len(new_data) #去重路线条数\n",
+    "        return new_data,z\n",
+    "\n",
+    "    dict2={}\n",
+    "    dict2['urls']=DelRepeat(datas,'url')[0]\n",
+    "    print('去除线路：',DelRepeat(datas,'url')[1])\n",
+    "    print('总成功路线：',y-DelRepeat(datas,'url')[1])\n",
+    "    savejson2=json.dumps(dict2, indent=4, ensure_ascii=False)\n",
+    "    \n",
+    "    # print(type(savejson2))\n",
+    "    with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
+    "        file.write(savejson2)\n",
+    "        file.close()\n",
+    "    return savejson2,y-DelRepeat(datas,'url')[1]\n",
+    "\n",
+    "\n",
+    "def check_file_exist():\n",
+    "    folder_path = os.getcwd()\n",
+    "    file_list = os.listdir(folder_path)\n",
+    "    if filename in file_list:\n",
+    "        # print(file_list)\n",
+    "        file_path = os.path.join(folder_path,filename)\n",
+    "        # 获取tvboxjson文件的修改时间\n",
+    "        filelast_modified=os.path.getmtime(file_path)\n",
+    "        last_modified_time = datetime.fromtimestamp(filelast_modified)\n",
+    "        formatted_time = last_modified_time.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "        print('文件存在，文件修改时间是：',formatted_time,\"文件路径是：\",file_path)\n",
+    "        return file_path\n",
+    "    else:\n",
+    "        print('文件不存在')\n",
+    "        # print(file_list)\n",
+    "\n",
+    "def main():\n",
+    "    # url = \"https://gitee.com/jiangnandao/tvboxshare/raw/master/Tvtest\"\n",
+    "    url=\"https://gitee.com/jiangnandao/tvboxshare/raw/master/TVLineTestTew.json\"\n",
+    "    tvjson=process_json(url)\n",
+    "    notify.send(\"tvbox路线失效验证\", \"最后成功的线路条数有：\"+str(tvjson[1]))\n",
+    "    check_file_exist()\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    filename='tvbox.json'\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
