--- a/ipy_readexcel New1120.ipynb
+++ b/ipy_readexcel New1120.ipynb
@@ -387,6 +387,130 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20250101"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "解析失败:  失败状态：000 http://xmbjm.fh4u.org/ck.txt\n",
+      "解析失败:  失败状态：000 https://raw.gitcode.com/yydg/ggdx/raw/main/Xboxb.json\n",
+      "解析失败:  失败状态：000 http://我不是.肥猫.love:63/接口禁止贩卖\n",
+      "解析失败:  失败状态：000 https://xhdwc.tk/0\n",
+      "解析失败:  失败状态：000 http://8.210.232.168/xc.json\n",
+      "解析失败:  失败状态：000 http://yydsys.top/duo\n",
+      "解析失败:  失败状态：000 http://yydsys.top/duo/ali\n",
+      "解析失败:  失败状态：000 https://jihulab.com/duomv/apps/-/raw/main/fast.json\n",
+      "解析失败:  失败状态：000 http://tv.nxog.top/api.php?mz=xb&id=1&b=欧歌\n",
+      "解析失败:  失败状态：000 http://jk.itvbox.cc:66/可视TV/云星日记/仓库/api.json\n",
+      "解析失败:  失败状态：000 http://52bsj.vip:98/wuaihouse\n",
+      "解析失败:  失败状态：000 http://yydsys.top/duo\n",
+      "解析失败:  失败状态：000 https://la.kstore.space/download/2883/0110.txt\n",
+      "解析失败:  失败状态：000 http://52bsj.vip:98/wuai\n",
+      "解析失败:  失败状态：000 http://itvbox.cc/tvbox/云星日记/1.m3u8\n",
+      "解析失败:  失败状态：000 http://miaotvs.cn/meow\n",
+      "解析失败:  失败状态：000 http://天.陌尘.ic\n",
+      "解析失败:  失败状态：000 http://xmbjm.fh4u.org/ck.txt\n",
+      "解析失败:  失败状态：000 http://肥猫.com/ \n",
+      "解析失败:  失败状态：000 http://xmbjm.fh4u.org/ck.txt\n",
+      "H线路 首次解析状态:200 https://mirror.ghproxy.com/https://raw.githubusercontent.com/vbskycn/tvbox/a244f6f5c08565a9a0e319d6a3cc2e919d05d893/MY探探.txt\n",
+      "解析失败:  失败状态：000 https://www.mpanso.com/小米/DEMO.json\n",
+      "解析失败:  失败状态：000 http://meowtv.cn/tv\n",
+      "解析失败:  失败状态：000 https://龙伊.top/\n",
+      "H线路 首次解析状态:200 https://mirror.ghproxy.com/https://raw.githubusercontent.com/guot55/YGBH/main/vip2.json\n",
+      "解析失败:  失败状态：000 https://2912.kstore.space/0506.json\n",
+      "H线路 首次解析状态:200 http://550.3vcn.work/wdjyys.json\n",
+      "________________________________________________________________________________________________________________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def respon_out(respon): #输入respond,判断线路、单仓和多仓\n",
+    "    mcang=re.search(\"storeHouse\",respon,re.M|re.I)\n",
+    "    scang = re.search(\"urls\",respon,re.M|re.I)\n",
+    "    xlu = re.search(\"sites\",respon,re.M|re.I)\n",
+    "    if xlu is not None :\n",
+    "        return \"H线路\"\n",
+    "    elif xlu is  None and scang is not None and mcang is None:\n",
+    "        return \"H单仓\"\n",
+    "    elif xlu is  None and scang is  None and mcang is not None:\n",
+    "        return \"H多仓\"\n",
+    "    else :\n",
+    "        return \"other\"\n",
+    "\n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"https://xn--sss604efuw.com/jm/jiemi.php?url=\"\n",
+    "    url1=agentlink+url\n",
+    "    return url1\n",
+    "\n",
+    "def url_respon(url): #输入原始url,解析网站。返回：0-代理url；1-respone等元组；2-状态+200\n",
+    "    headers={\"User-Agent\":\"okhttp/4.1.0\"}\n",
+    "    try:\n",
+    "        respon=requests.get(url,verify=False,timeout =60)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            if respon_out(respon.text)!='other': #如果解析结果不是other，则返回解析结果\n",
+    "                conten=\"首次解析状态:\"+str(codema)\n",
+    "                outcang=respon_out(respon.text)\n",
+    "                # print(respon.text)\n",
+    "                return url,conten,outcang\n",
+    "            else:\n",
+    "                respon1=requests.get(url,headers=headers,verify=False,timeout =60)  #更换UA\n",
+    "                codema1= respon1.status_code\n",
+    "                conten1=\"更换UA状态: \"+str(codema1)\n",
+    "                outcang1=respon_out(respon1.text)\n",
+    "                return url,conten1,outcang1\n",
+    "        else:\n",
+    "            respon2=requests.get(url=addlink(url),headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
+    "            codema2= respon.status_code\n",
+    "            conten2=\"解析状态: \"+str(codema2)\n",
+    "            outcang2=respon_out(respon2.text)\n",
+    "            return url,conten2,outcang2\n",
+    "    except Exception:\n",
+    "        # print(\"解析失败了!: \",url)\n",
+    "        return url,\"失败状态：000\",\"解析失败: \"\n",
+    "        \n",
+    "def main():\n",
+    "    i=1\n",
+    "    # excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx' #家里路径\n",
+    "    excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx' #公司路径\n",
+    "    workbook = openpyxl.load_workbook(filename=excel_file)\n",
+    "    sheet1= workbook['sb']\n",
+    "    for row in sheet1.iter_rows(values_only=True):\n",
+    "        if not row is None :\n",
+    "            analysis_respone=url_respon(row[1]) \n",
+    "            strtxt=analysis_respone[2] #返回解析结果,如单仓/多仓/失败\n",
+    "            codetxt=analysis_respone[1]  #返回 url的返回状态 如200，400\n",
+    "            sheet1.cell(row = i,column = 4,value = strtxt)\n",
+    "            sheet1.cell(row = i,column = 5,value = codetxt)\n",
+    "            # sheet1.cell(row = i,column = 6,value = analysis_respone[0]) #返回代理链接\n",
+    "            print(strtxt,codetxt,row[1])\n",
+    "        else:\n",
+    "            break\n",
+    "        i=i+1\n",
+    "    workbook.save(filename = \"excel_0103sb2.xlsx\")\n",
+    "    print(\"__\"*100)\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
