--- a/ipy_判断单仓内线路250103.ipynb
+++ b/ipy_判断单仓内线路250103.ipynb
@@ -116,95 +116,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "总线路条数： 41\n",
-      "ðå¤©å¾®ViPçº¿ http://7337.kstore.space/twvip/%E8%87%AA%E7%94%A8%E6%B5%8B%E8%AF%95.json 线路成功\n",
-      "响应时间: 1.2699 秒;  内容长度: 47.38 KB\n",
+      "总线路条数： 8\n",
+      "影视 https://9877.kstore.space/FourDS/movie.json 线路成功\n",
+      "响应时间: 2.0022 秒;  内容长度: 46.88 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "ðä¸æå½±ä» https://11256.kstore.space/%E5%85%8D%E8%B4%B9%E5%8B%BF%E4%BC%A0.json 线路成功\n",
-      "响应时间: 1.6541 秒;  内容长度: 20.34 KB\n",
+      "动漫 https://9877.kstore.space/FourDS/anime.json 线路成功\n",
+      "响应时间: 1.5435 秒;  内容长度: 18.44 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðå°èæçº¿ https://hb.xyyh.online/tvbox/\n",
-      "响应时间: 26.7893 秒;  内容长度: 2.39 KB\n",
+      "文艺 https://9877.kstore.space/FourDS/other.json 线路成功\n",
+      "响应时间: 1.5474 秒;  内容长度: 16.54 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "ðéªé¶çº¿è·¯ https://100km.top/0 线路成功\n",
-      "响应时间: 3.2493 秒;  内容长度: 12.38 KB\n",
+      "体育 https://9877.kstore.space/FourDS/sport.json 线路成功\n",
+      "响应时间: 1.3532 秒;  内容长度: 9.21 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðå°é©¬çº¿è·¯ https://szyyds.cn/tv/x.json\n",
-      "响应时间: 1.5968 秒;  内容长度: 12.38 KB\n",
+      "教育 https://9877.kstore.space/FourDS/education.json 线路成功\n",
+      "响应时间: 1.6155 秒;  内容长度: 18.17 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðé¥­ç¡¬ä¸çº¿ http://www.é¥­å¤ªç¡¬.com/tv\n",
-      "响应时间: 0.0137 秒;  内容长度: 12.38 KB\n",
+      "直播 https://9877.kstore.space/FourDS/webcast.json 线路成功\n",
+      "响应时间: 1.3536 秒;  内容长度: 10.09 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðDä½¬é­æ¹ https://download.kstore.space/download/2883/nzk/nzk0722.json\n",
-      "响应时间: 1.6964 秒;  内容长度: 0.02 KB\n",
+      "磁力 https://9877.kstore.space/FourDS/magnet.json 线路成功\n",
+      "响应时间: 1.5168 秒;  内容长度: 12.67 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "ðä¸è¯å¸çº¿ https://notabug.org/qizhen15800/My9394/raw/master/%e4%b8%8d%e8%89%af%e5%b8%85.json 线路成功\n",
-      "响应时间: 1.6364 秒;  内容长度: 31.97 KB\n",
+      "云盘 https://9877.kstore.space/FourDS/cloud.json 线路成功\n",
+      "响应时间: 1.6943 秒;  内容长度: 23.55 KB\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðé¾ä¼çº¿è·¯ https://é¾ä¼.top\n",
-      "响应时间: 0.0010 秒;  内容长度: 31.97 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðå°ç±³çº¿è·¯ http://www.mpanso.com/å°ç±³/DEMO.json\n",
-      "响应时间: 0.8540 秒;  内容长度: 3.77 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðéé¿çº¿è·¯ https://gitlab.com/duomv/dzhipy/-/raw/main/index.json 线路成功\n",
-      "响应时间: 2.3958 秒;  内容长度: 104.71 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðçäºå°çº¿ http://tvbox.çäºå°æ¾çå¨.xyz\n",
-      "响应时间: 0.0018 秒;  内容长度: 104.71 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðæåçº¿è·¯ https://ghproxy.liuzhicong.com/https://raw.githubusercontent.com/bestpvp/tm/main/source/stable/main.json\n",
-      "响应时间: 0.3357 秒;  内容长度: 104.71 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðç¯å®è½©çº¿ https://6492.kstore.space/xnf/xnf.json 线路成功\n",
-      "响应时间: 1.9907 秒;  内容长度: 88.76 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðæ½æ´ç©ºé´ https://cn.kstore.space/download/2863/01.txt\n",
-      "响应时间: 1.7385 秒;  内容长度: 0.02 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðå®ççº¿è·¯ http://mzjk.top/ç¦æ­¢è´©å\n",
-      "响应时间: 2.7940 秒;  内容长度: 0.14 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðé¦éæçº¿ https://gh-proxy.com/https://raw.githubusercontent.com/gaotianliuyun/gao/master/XYQ.json 线路成功\n",
-      "响应时间: 1.3435 秒;  内容长度: 17.54 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðæ¥çå¤©ä¸ https://gitlink.org.cn/api/hailin/aishangtv5/raw/tvbox/aishang.json?ref=master\n",
-      "响应时间: 4.4590 秒;  内容长度: 0.04 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðç¥ä»çº¿è·¯ http://dp.sxtv.top:88/img\n",
-      "响应时间: 2.7145 秒;  内容长度: 0.04 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前error ðä¸åçº¿è·¯ http://jin.é¦å¥å¥.love\n",
-      "响应时间: 0.0000 秒;  内容长度: 0.04 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðæºå¥½çº¿è·¯ https://ztha.top/TVBox/thdjk.json 线路成功\n",
-      "响应时间: 3.1872 秒;  内容长度: 15.57 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðèåçº¿è·¯ https://github.moeyy.xyz/https://raw.githubusercontent.com/liu673cn/box/main/m.json\n",
-      "响应时间: 1.1582 秒;  内容长度: 3.12 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðä¿ä½¬çº¿è·¯ http://home.jundie.top:81/top98.json 线路成功\n",
-      "响应时间: 1.7050 秒;  内容长度: 14.26 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðéé¾å½±çº¿ https://gitee.com/yiwu369/6758/raw/master/%E9%9D%92%E9%BE%99/1.json 线路成功\n",
-      "响应时间: 2.7236 秒;  内容长度: 13.77 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "ðè¶çº§çº¿è·¯ https://git.acwing.com/203BDXC/tvboxt/-/raw/main/CJ.json 线路成功\n",
-      "响应时间: 2.1674 秒;  内容长度: 41.43 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "已删除当前失败 ðç½å«å½±çº¿ https://12448.kstore.space/Baipiao/tvbox/ç½å«4K.json\n",
-      "响应时间: 1.7086 秒;  内容长度: 0.00 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "成功路线条数： 26\n",
+      "成功路线条数： 8\n",
       "去除线路： 0\n",
-      "总成功路线： 26\n"
+      "总成功路线： 8\n"
      ]
     },
     {
@@ -214,7 +160,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m url1\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://qixing.myhkw.com/DC.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# mainx(url)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mKuSingleURL\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl1\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[16], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m url1\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://qixing.myhkw.com/DC.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# mainx(url)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mKuSingleURL\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32md:\\lxd\\learn\\py\\tvbox\\KuSingleURL.py:101\u001b[0m, in \u001b[0;36mprocess_json\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m     98\u001b[0m savejson2\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mdumps(dict2, indent\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m, ensure_ascii\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# print(type(savejson2))\u001b[39;00m\n\u001b[1;32m--> 101\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mfilename\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m    102\u001b[0m     file\u001b[38;5;241m.\u001b[39mwrite(savejson2)\n\u001b[0;32m    103\u001b[0m     file\u001b[38;5;241m.\u001b[39mclose()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'filename' is not defined"
      ]
