--- a/ipy_判断单仓内线路250103.ipynb
+++ b/ipy_判断单仓内线路250103.ipynb
@@ -111,68 +111,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "从其他py脚本中读取 单个url仓库，返回线路条数和线路\n"
+    "从其他py脚本中读取 单个url仓库，返回线路条数和线路\n",
+    "单独python文件执行，test1.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "总线路条数： 8\n",
-      "影视 https://9877.kstore.space/FourDS/movie.json 线路成功\n",
-      "响应时间: 2.0022 秒;  内容长度: 46.88 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "动漫 https://9877.kstore.space/FourDS/anime.json 线路成功\n",
-      "响应时间: 1.5435 秒;  内容长度: 18.44 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "文艺 https://9877.kstore.space/FourDS/other.json 线路成功\n",
-      "响应时间: 1.5474 秒;  内容长度: 16.54 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "体育 https://9877.kstore.space/FourDS/sport.json 线路成功\n",
-      "响应时间: 1.3532 秒;  内容长度: 9.21 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "教育 https://9877.kstore.space/FourDS/education.json 线路成功\n",
-      "响应时间: 1.6155 秒;  内容长度: 18.17 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "直播 https://9877.kstore.space/FourDS/webcast.json 线路成功\n",
-      "响应时间: 1.3536 秒;  内容长度: 10.09 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "磁力 https://9877.kstore.space/FourDS/magnet.json 线路成功\n",
-      "响应时间: 1.5168 秒;  内容长度: 12.67 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "云盘 https://9877.kstore.space/FourDS/cloud.json 线路成功\n",
-      "响应时间: 1.6943 秒;  内容长度: 23.55 KB\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "成功路线条数： 8\n",
-      "去除线路： 0\n",
-      "总成功路线： 8\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'filename' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m url1\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://qixing.myhkw.com/DC.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# mainx(url)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mKuSingleURL\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\lxd\\learn\\py\\tvbox\\KuSingleURL.py:101\u001b[0m, in \u001b[0;36mprocess_json\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m     98\u001b[0m savejson2\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mdumps(dict2, indent\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m, ensure_ascii\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# print(type(savejson2))\u001b[39;00m\n\u001b[1;32m--> 101\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mfilename\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m    102\u001b[0m     file\u001b[38;5;241m.\u001b[39mwrite(savejson2)\n\u001b[0;32m    103\u001b[0m     file\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'filename' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from KuSingleURL import mainx\n",
+    "# from KuSingleURL import mainx\n",
     "import KuSingleURL\n",
     "url=\"https://9877.kstore.space/FourDS/api.json\"\n",
-    "url1=\"https://qixing.myhkw.com/DC.txt\"\n",
+    "url1=\"http://kxrj.site:55\"  #这个有异常\n",
     "# mainx(url)\n",
-    "KuSingleURL.process_json(url)\n"
+    "KuSingleURL.process_json(url1,\"999\")\n",
+    "\n",
+    "# url=\"https://9877.kstore.space/FourDS/api.json\"\n",
+    "# url1=\"https://qixing.myhkw.com/DC.txt\"\n",
+    "# # mainx(url)\n",
+    "# KuSingleURL.process_json(url,\"12345\")"
    ]
   }
  ],
