--- a/ipy_excel2SourceUrls.ipynb
+++ b/ipy_excel2SourceUrls.ipynb
@@ -526,6 +526,38 @@
     "dict_loaded = json.dumps(listdict, indent=4, ensure_ascii=False)\n",
     "print(dict_loaded)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20250107多仓"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from openpyxl import load_workbook\n",
+    "excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx'\n",
+    "workbook = load_workbook(filename=excel_file)\n",
+    "# sheet = workbook.active  # 获取活动工作表\n",
+    "sheet = workbook['dc']  # 根据名称获取工作表\n",
+    "dict={}\n",
+    "listdict=[]\n",
+    "for row in sheet.iter_rows(values_only=True):\n",
+    "    # print(row[0],row[1])\n",
+    "    # dict.update(name=row[0],url=row[1])\n",
+    "    dict[\"sourceName\"]=row[0]\n",
+    "    dict[\"sourceUrl\"]=row[1]\n",
+    "    listdict.append(dict.copy())\n",
+    "# print(listdict)\n",
+    "dict_loaded = json.dumps(listdict, indent=4, ensure_ascii=False)\n",
+    "print(dict_loaded)"
+   ]
   }
  ],
  "metadata": {
