--- a/ipy_判断单仓内线路250103.ipynb
+++ b/ipy_判断单仓内线路250103.ipynb
@@ -133,6 +133,140 @@
     "# # mainx(url)\n",
     "# KuSingleURL.process_json(url,\"12345\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20250213\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H线路 首次解析状态:200 http://47.96.82.41:5188/\n",
+      "H线路 首次解析状态:200 http://47.96.82.41:10/\n",
+      "解析失败:  失败状态：000 https://weixine.net/ysc.json\n",
+      "H线路 首次解析状态:200 https://dxawi.github.io/0/0.json\n",
+      "H线路 首次解析状态:200 https://raw.liucn.cc/box/m.json\n",
+      "H线路 首次解析状态:200 https://notabug.org/qizhen15800/My9394/raw/master/ProfessionalEdition.m3u8\n",
+      "H线路 首次解析状态:200 https://ghproxy.net/https://raw.githubusercontent.com/xiaolinshao/linshao/main/1.json\n",
+      "H线路 首次解析状态:200 https://szyyds.cn/tv/x.json\n",
+      "H线路 首次解析状态:200 https://gh-proxy.com/https://raw.githubusercontent.com/wnddwc/daiweichun/main/waynfifdwj.json\n",
+      "H线路 首次解析状态:200 https://ghfast.top/https://raw.githubusercontent.com/xianyuyimu/TVBOX-/main/TVBox/%E4%B8%80%E6%9C%A8%E8%87%AA%E7%94%A8.json\n",
+      "解析失败:  失败状态：000 https://www.ywsj.cf/upload/2023/10/yyzq4k.json\n",
+      "H线路 首次解析状态:200 https://notabug.org/liuyun/H-2023/raw/master/%E7%90%89%E8%8A%B8.json\n",
+      "解析失败:  失败状态：000 https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "解析失败:  失败状态：000 https://raw.githubusercontent.com/YuanHsing/freed/master/TVBox/meow.json\n",
+      "解析失败:  失败状态：000 https://raw.githubusercontent.com/gaotianliuyun/gao/master/0825.json\n",
+      "H线路 首次解析状态:200 http://xhztv.top/4k.json\n",
+      "H线路 首次解析状态:200 https://gitee.com/yiwu369/6758/raw/master/%E9%9D%92%E9%BE%99/1.json\n",
+      "H线路 首次解析状态:200 https://9xi4o.tk/0725.json\n",
+      "H线路 首次解析状态:200 http://fmys.top/fmys.json\n",
+      "解析失败:  失败状态：000 http://tv.nxog.top/m\n",
+      "H线路 首次解析状态:200 https://ghfast.top/https://raw.githubusercontent.com/FongMi/CatVodSpider/main/json/demo.json\n",
+      "H线路 首次解析状态:200 https://gitee.com/lukei7/lib/raw/Luck/%E8%87%AA%E5%BB%BA.json\n",
+      "解析失败:  失败状态：000 https://ghproxy.net/https://raw.githubusercontent.com/xiaolinshao/linshao/main/18.json\n",
+      "解析失败:  失败状态：000 https://tv.nxog.top/m/111.php\n",
+      "H线路 首次解析状态:200 https://git.acwing.com/ocean2025/ocean/-/raw/main/api.json\n",
+      "H线路 首次解析状态:200 https://chuanshuo.77blog.cn/tv.json\n",
+      "H线路 首次解析状态:200 http://xhztv.top/xhz/\n",
+      "H线路 首次解析状态:200 https://ztha.top/TVBox/thdjk.json\n",
+      "H线路 首次解析状态:200 http://www.mpanso.com/%E5%B0%8F%E7%B1%B3/DEMO.json\n",
+      "H线路 首次解析状态:200 https://pandown.pro/tvbox/tvbox.json\n",
+      "H线路 首次解析状态:200 http://home.jundie.top:81/top98.json\n",
+      "H线路 首次解析状态:200 http://cdn.qiaoji8.com/tvbox.json\n",
+      "H线路 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
+      "解析失败:  失败状态：000 https://raw.githubusercontent.com/gaotianliuyun/gao/master/0825.json\n",
+      "H线路 首次解析状态:200 https://9xi4o.tk/0725.json\n",
+      "H线路 首次解析状态:200 https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def respon_out(respon): #输入respond,判断线路、单仓和多仓\n",
+    "    mcang=re.search(\"storeHouse\",respon,re.M|re.I)\n",
+    "    scang = re.search(\"urls\",respon,re.M|re.I)\n",
+    "    xlu = re.search(\"sites\",respon,re.M|re.I)\n",
+    "    if xlu is not None :\n",
+    "        return \"H线路\"\n",
+    "    elif xlu is  None and scang is not None and mcang is None:\n",
+    "        return \"H单仓\"\n",
+    "    elif xlu is  None and scang is  None and mcang is not None:\n",
+    "        return \"H多仓\"\n",
+    "    else :\n",
+    "        return \"other\"\n",
+    "\n",
+    "def addlink(url): #增加代理链接  # noqa: F811\n",
+    "    agentlink=\"https://xn--sss604efuw.com/jm/jiemi.php?url=\"\n",
+    "    url1=agentlink+url\n",
+    "    return url1\n",
+    "\n",
+    "def url_respon(url): #输入原始url,解析网站。返回：0-代理url；1-respone等元组；2-状态+200  # noqa: F811\n",
+    "    headers={\"User-Agent\":\"okhttp/4.1.0\"}\n",
+    "    try:\n",
+    "        respon=requests.get(url,verify=False,timeout =60)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            if respon_out(respon.text)!='other': #如果解析结果不是other，则返回解析结果\n",
+    "                conten=\"首次解析状态:\"+str(codema)\n",
+    "                outcang=respon_out(respon.text)\n",
+    "                # print(respon.text)\n",
+    "                return url,conten,outcang\n",
+    "            else:\n",
+    "                respon1=requests.get(url,headers=headers,verify=False,timeout =60)  #更换UA\n",
+    "                codema1= respon1.status_code\n",
+    "                conten1=\"更换UA状态: \"+str(codema1)\n",
+    "                outcang1=respon_out(respon1.text)\n",
+    "                return url,conten1,outcang1\n",
+    "        else:\n",
+    "            respon2=requests.get(url=addlink(url),headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
+    "            codema2= respon.status_code\n",
+    "            conten2=\"解析状态: \"+str(codema2)\n",
+    "            outcang2=respon_out(respon2.text)\n",
+    "            return url,conten2,outcang2\n",
+    "    except Exception:\n",
+    "        # print(\"解析失败了!: \",url)\n",
+    "        return url,\"失败状态：000\",\"解析失败: \"\n",
+    "\n",
+    "def main():\n",
+    "    i=1\n",
+    "    excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx' #家里路径\n",
+    "    # excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_0103.xlsx' #公司路径\n",
+    "    workbook = openpyxl.load_workbook(filename=excel_file)\n",
+    "    sheet1= workbook['0213']\n",
+    "    for row in sheet1.iter_rows(values_only=True):\n",
+    "        if row is not None :\n",
+    "            analysis_respone=url_respon(row[1]) \n",
+    "            \n",
+    "\n",
+    "            strtxt=analysis_respone[2] #返回解析结果,如单仓/多仓/失败\n",
+    "            codetxt=analysis_respone[1]  #返回 url的返回状态 如200，400\n",
+    "            # sheet1.cell(row = i,column = 4,value = strtxt)\n",
+    "            # sheet1.cell(row = i,column = 5,value = codetxt)\n",
+    "\n",
+    "            print(strtxt,codetxt,row[1])\n",
+    "        else:\n",
+    "            break\n",
+    "        i=i+1\n",
+    "    workbook.save(filename = \"excel_0213.xlsx\")\n",
+    "    # print(\"__\"*100)\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
